--- a/guessing_game/Cargo.toml
+++ b/guessing_game/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "guessing_game"
 version = "0.1.0"
-authors = ["hajakuja"]
+authors = ["hajakuja<uqabra@gmail.com>"]
 
 [dependencies]
